<resources>
    <string name="app_name">CounterApp</string>
    <string name="counter">Counter</string>
    <string name="search">Search</string>
    <string name="text">text</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="car">Car</string>
    <string name="_60">6</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="set_the_background_color">Set the background color</string>
    <string name="step_count">Step Count</string>
    <string name="set_the_amount_of_steps">Set the amount of steps</string>
    <string name="_00">00</string>
    <string name="language">Language</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="deleate_counters">Deleate Counters</string>
    <string name="deleate_all_existing_counters">Deleate all existing Counters</string>
    <string name="delete_counters">Delete Counters</string>
    <string name="delete_all_existing_counters">Delete all existing Counters</string>
    <string name="count_it">Count IT</string>
</resources>